# python-template

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: __init__.py  core.py
tests/: conftest.py  test_sample.py
